app-k8s/k8s/backend-despachos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-despachos
  namespace: innovatech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-despachos
  template:
    metadata:
      labels:
        app: backend-despachos
    spec:
      containers:
        - name: backend-despachos
          image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/innovatech/backend-despachos:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
