app-k8s/k8s/backend-ventas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ventas
  namespace: innovatech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-ventas
  template:
    metadata:
      labels:
        app: backend-ventas
    spec:
      containers:
        - name: backend-ventas
          image: PLACEHOLDER_VENTAS
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
