app-k8s/k8s/backend-despachos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-despachos-svc
  namespace: innovatech
spec:
  selector:
    app: backend-despachos
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
