app-k8s/k8s/backend-ventas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ventas-svc
  namespace: innovatech
spec:
  selector:
    app: backend-ventas
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
