app-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovatech-ingress
  namespace: innovatech
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /api/despachos
            pathType: Prefix
            backend:
              service:
                name: backend-despachos-svc
                port:
                  number: 8081
          - path: /api/ventas
            pathType: Prefix
            backend:
              service:
                name: backend-ventas-svc
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
